set(CMAKE_C_CLANG_TIDY "")
add_library(cst_test_lib test_mpmc_queue.c)
add_executable(cst_test test_main.c )
add_dependencies(cst_test_lib oxqo_cst)
add_dependencies(cst_test cst_test_lib)
find_package(Threads REQUIRED)
target_include_directories(cst_test_lib PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_include_directories(cst_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(cst_test_lib oxqo_cst Threads::Threads)
target_link_libraries(cst_test cst_test_lib)
